--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studiometa/vue-mapbox-gl": "^2.2.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.6.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
